Changelog
=========

0.16 - Unreleased
-----------------

* Added ``reset`` command to reset the develop state of packages. This is
  useful when switching to a new buildout configuration. During the next
  buildout run the develop state is determined the same way as in a clean
  buildout. [fschulze]

* Got rid of deprecation warning in Python 2.6 by removing unnecessary call
  of __init__ in working copy implementations.
  [fschulze]

0.15 - 2009-04-17
-----------------

* Added reminder to run buildout after activating or deactivating packages.
  [fschulze]

* Added ``rebuild`` command to rerun buildout with the last used arguments.
  [fschulze]

0.14 - 2009-04-16
-----------------

* Fixed verbose output of ``checkout`` command.
  [fschulze]

* Added ``-f`` option to ``update`` command to force updates even if the
  working copy is dirty.
  [fschulze]

0.13 - 2009-04-14
-----------------

* Added ``-a`` option to ``update`` command to only update the packages
  declared in the ``auto-checkout`` list.
  [fschulze]

* Added ``activate`` and ``deactivate`` commands. This allows to select which
  packages are added to the ``develop`` option of zc.buildout. Enhanced the
  ``status`` command to show the additional informations.
  [fschulze]

* Switched the meaning of ``~`` and ``C`` in status command.
  [fschulze]

0.12 - 2009-04-14
-----------------

* Added support for Mercurial (hg).
  [mj]

* Refactored working copy logic, so it's easier to add support for other
  version control systems.
  [fschulze]

* Added verbose flag to ``checkout`` and ``update`` commands.
  [fschulze]

0.11 - 2009-04-06
-----------------

* Removed the nice os.path.relpath usage, because it's only been introduced
  with Python 2.6.
  [fschulze]

0.10 - 2009-04-06
-----------------

* Added verbose flag to ``status`` command.
  [fschulze]

* Deprecated ``sources-svn`` and ``sources-git`` in favour of just ``sources``
  which allows more flexibility.
  [fschulze]
